[build-system]
requires = ["setuptools>=42.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcl"
version = "1.0.1"
description = "A Python 3 wrapper for the mcl library (BLS12-381) using Pybind11."
authors = [
    { name = "Jemtaly", email = "Jemtaly@outlook.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.urls]
Homepage = "https://www.github.com/Jemtaly/pymcl"
Repository = "https://www.github.com/Jemtaly/pymcl"
